boulder/tests/compile_fail/module/import_fn_clash.bo
# `a` is an already valid function name
# (10:

mod inner {
    fn a() -> Bool {
        True
    }
}

use inner::a;

fn a() -> u32 {
    7
}